; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_client.c_property_free.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_client.c_property_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.observe_property = type { i32, i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @property_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @property_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.observe_property*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.observe_property*
  store %struct.observe_property* %5, %struct.observe_property** %3, align 8
  %6 = load %struct.observe_property*, %struct.observe_property** %3, align 8
  %7 = getelementptr inbounds %struct.observe_property, %struct.observe_property* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.observe_property*, %struct.observe_property** %3, align 8
  %14 = getelementptr inbounds %struct.observe_property, %struct.observe_property* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %30

17:                                               ; preds = %1
  %18 = load %struct.observe_property*, %struct.observe_property** %3, align 8
  %19 = getelementptr inbounds %struct.observe_property, %struct.observe_property* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.observe_property*, %struct.observe_property** %3, align 8
  %22 = getelementptr inbounds %struct.observe_property, %struct.observe_property* %21, i32 0, i32 2
  %23 = call i32 @m_option_free(i64 %20, i32* %22)
  %24 = load %struct.observe_property*, %struct.observe_property** %3, align 8
  %25 = getelementptr inbounds %struct.observe_property, %struct.observe_property* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.observe_property*, %struct.observe_property** %3, align 8
  %28 = getelementptr inbounds %struct.observe_property, %struct.observe_property* %27, i32 0, i32 0
  %29 = call i32 @m_option_free(i64 %26, i32* %28)
  br label %30

30:                                               ; preds = %17, %1
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @m_option_free(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
